--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Printf"]
 	path = Printf
 	url = https://github.com/Martin-dev86/Ft_Printf.git
+[submodule "Get_next_line"]
+	path = Get_next_line
+	url = https://github.com/Martin-dev86/Get_next_line.git
